@@ -1,11 +1,10 @@
 package entity;
 
 import com.sonderben.trust.CategoryEnum;
-import com.sonderben.trust.constant.Action;
 import com.sonderben.trust.constant.ScreenEnum;
 import com.sonderben.trust.model.Role;
-import com.sonderben.trust.model.Screen;
 
+import java.util.Arrays;
 import java.util.Calendar;
 import java.util.List;
 
@@ -133,19 +132,9 @@ public class EnterpriseEntity extends BaseEntity{
 
     private EmployeeEntity createEmployee(){
         Role role =new Role(
-                "Admin",List.of(
-                new Screen( ScreenEnum.LOGIN,List.of(Action.ADD,Action.READ,Action.UPDATE,Action.DELETE) ),
-                //new Screen( ScreenEnum.INVENTORY,List.of(Action.ADD,Action.READ,Action.UPDATE,Action.DELETE) ),
-                new Screen( ScreenEnum.ROLE,List.of(Action.ADD,Action.READ,Action.UPDATE,Action.DELETE) ),
-                new Screen( ScreenEnum.USER,List.of(Action.ADD,Action.READ,Action.UPDATE,Action.DELETE) ),
-                new Screen( ScreenEnum.SALE,List.of(Action.ADD,Action.READ,Action.UPDATE,Action.DELETE) ),
-                new Screen( ScreenEnum.PRODUCT,List.of(Action.ADD,Action.READ,Action.UPDATE,Action.DELETE) ),
-                new Screen( ScreenEnum.EMPLOYEE,List.of(Action.ADD,Action.READ,Action.UPDATE,Action.DELETE) ),
-                new Screen( ScreenEnum.CONFIGURATION,List.of(Action.ADD,Action.READ,Action.UPDATE,Action.DELETE) ),
-                new Screen( ScreenEnum.QUERIES,List.of(Action.ADD,Action.READ,Action.UPDATE,Action.DELETE) ),
-                new Screen( ScreenEnum.CUSTOMER_SERVICE,List.of(Action.ADD,Action.READ,Action.UPDATE,Action.DELETE) )
+                "Admin", Arrays.asList(ScreenEnum.values())
 
-        ));
+        );
 
         Calendar calendar = Calendar.getInstance();
         calendar.set(Calendar.YEAR,2006);
